syntax = "proto3";

package bitesla.srv.exchange;

service Exchange {
    rpc LimitBuy (Currency) returns (Order) {
    }
    rpc LimitSell (Currency) returns (Order) {
    }
    rpc MarketBuy (Currency) returns (Order) {
    }
    rpc MarketSell (Currency) returns (Order) {
    }
    rpc CancelOrder (Currency) returns (Boolean) {
    }
    rpc GetOneOrder (Currency) returns (Order) {
    }
    rpc GetUnfinishOrders (Currency) returns (Orders) {
    }
    rpc GetOrderHistorys (Currency) returns (Orders) {
    }
    rpc GetTicker (Currency) returns (Ticker) {
    }
    rpc GetDepth (Currency) returns (Depth) {
    }
    rpc GetKlineRecords (Currency) returns (Klines) {
    }
    rpc GetTrades (Currency) returns (Trades) {
    }
    rpc GetAccount (Currency) returns (Accounts) {
    }
    rpc GetExchangeDetail (Currency) returns (Currency) {
    }
    rpc ListExchange (Currency) returns (Currencys) {
    }
    rpc PutExchange (Currency) returns (Currency) {
    }
    rpc DeleteExchange (Currency) returns (Currency) {
    }
}

message Currency {
    double double = 1;
    string price = 2;
    string orderId = 3;
    int32 page = 4;
    int32 size = 5;
    int32 period = 6;
    int32 since = 7;
    string exName = 8; //交易所名称
    string apiKey = 9; //key
    string apiSecret = 10; //secre
    string description = 11; //交易描述
    string currencyPair = 12; //两种货币格式：HT_USDT
    string amount = 13; //代币数量
    int32 accountType = 14; //账户类型
    int32 orderType = 15; // 订单类型
    int64 createTime = 16; //创建时间
    int64 updateTime = 17; //更新时间
    int64 currentLoginUserID = 18; //当前用户
    int64 exchangeId = 19; //交易所id

}

message Currencys {
    repeated Currency currencys = 1;
}

message Boolean {
    bool isBool = 1;
}

message Str {
    string str = 1;
}

message Trade {
    int64 tid = 1;
    TradeSide type = 2;
    double amount = 3;
    double price = 4;
    int64 date = 5;
    string currencyPair = 6;
}
message Trades {
    repeated Trade trades = 1;
}

message Kline {
    string currencyPair = 1;
    int64 timestamp = 2;
    double open = 3;
    double close = 4;
    double high = 5;
    double low = 6;
    double vol = 7;
}

// 每个属性都会附带有额外方法，因此分开描述
message Klines {
    repeated Kline klines = 1;
}

message DepthRecords {
    repeated DepthRecord list = 1;
}

message Accounts {
    repeated Account accounts = 1;
}


message DepthRecord {
    double price = 1;
    double amount = 2;
}

message Depth {
    string contractType = 1;
    string currencyPair = 2;
    string uTime = 3;
    DepthRecords AskList = 4;
    DepthRecords BidList = 5;
}

message Ticker {
    string contractType = 1;
    string pair = 2;
    double last = 3;
    double buy = 4;
    double sell = 5;
    double high = 6;
    double low = 7;
    double vol = 8;
    uint64 date = 9;
}

message Account {
    double asset = 1; //总资产
    double etAsset = 2; //净资产
    map<string, SubAccount> subAccounts = 3;
}

message SubAccount {
    string currency = 1;
    double amount = 2;
    double forzenAmount = 3;
    double loanAmount = 4;
}

message Orders {
    repeated Order orders = 1;
}

enum TradeStatus {
    UNFINISH = 0;
    PART_FINISH = 1;
    FINISH = 2;
    CANCEL = 3;
    REJECT = 4;
    CANCEL_ING = 5;
}

enum TradeSide {
    BUY = 0;
    SELL = 1;
    BUY_MARKET = 2;
    SELL_MARKET = 3;
}

message Order {
    double price = 1;
    double amount = 2;
    double avgPrice = 3;
    double dealAmount = 4;
    double fee = 5;
    int32 orderID = 6;
    int32 orderTime = 7;
    TradeStatus status = 8;
    string currencyPair = 9;
    TradeSide tradeSide = 10;
}
